<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/removeShoeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_shoe_title"
        android:layout_margin="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/remove_shoe_dialog"
        android:layout_marginLeft="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonDialog_cancel"
            android:text="@string/cancel_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonDialog_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>